testData/inspections/linkResolve/createMissingXrefFile.adoc
:var: ab

xref:{var}/<error descr="File doesn't resolve">missing.adoc</error><caret>[]
